<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Pantry</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_inventory">InventoryActivity</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_activity_shopping_list">ShoppingListActivity</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="title_activity_inventory_add">InventoryAddActivity</string>
    <string name="title_activity_recipe">RecipeActivity</string>
    <string name="action_inventory">My Pantry</string>
    <string name="action_shopping_list">My Shopping List</string>
    <string name="action_home_page">Home</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_register">Sign Up</string>
    <string name="action_new_recipe">Add New Recipe</string>
    <string name="add_item">Add</string>
    <string name="remove_item">Remove</string>
    <string name="ingredient_types">Ingredient Type</string>
    <string name="ingredient_update">Update Inventory</string>
    <string name="ingredient_search">Add Your Own Item</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="ShoppingListTitle">Your Shopping List</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="prompt_password_confirmation">Confirm Password</string>
    <string name="add_recipe_title_hint">Recipe Title</string>
    <string name="add_ingredient_title_hint">Add Ingredient</string>
    <string name="add_picture_text">Add Picture</string>
    <string name="ingredients"><b><u>Ingredients</u></b></string>
    <string name="instructions"><b><u>Instructions</u></b></string>
    <string name="add_instruction_hint">Add Instructions Separated By a Period</string>
    <string name="save_recipe_butt">Save Recipe</string>
    <string name="pic_from_gal">From Gallery</string>
    <string name="pic_from_cam">From Camera</string>
    <string name="more_ing">More Ingredients</string>
    <string name="add_recipe">Add Recipe</string>
    <string-array name="ingredient_type_array">
        <item>Grain</item>
        <item>Produce</item>
        <item>Dairy</item>
        <item>Meat</item>
        <item>Baking</item>
        <item>Spices</item>
        <item>Drinks</item>
        <item>Other</item>
    </string-array>

    <string name="ingredient_search">Add something to your shopping list...</string>
    <string name="add_to_shopping_list">Add to Shopping List</string>
    <string name="tutorial_title">Welcome To the Pantry!</string>
    <string name="setup_inventory">Setup Inventory</string>
    <string name="skip_text">Skip</string>
    <string name="inventoryTable">inventory</string>
    <string name="shoppingListTable">shoppingList</string>
    <string name="ingredientsTable">ingredients</string>
    <string name="enter_search_query">Enter search query...</string>
    <string name="button_search">Search</string>

    <drawable name="default_image">#000000</drawable>

    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="InventoryAddTitle">Add Ingredients</string>
    <string name="InventoryTitle">Your Pantry</string>
    <string name="title_activity_nav_menu_fragment">NavMenuFragment</string>
    <string name="update_inventory_button">Add Checked to Inventory</string>
    <string name="title_activity_basic_menu">BasicMenuActivity</string>
    <string name="recommendations">Recommendations:</string>
    <string name="title_activity_base_list">BaseListActivity</string>
    <string name="ingredient">Ingredients:</string>
    <string name="results">Search Results:</string>
    <string name="title_activity_display_webpage">DisplayWebpageActivity</string>
    <string name="dialog_add_ingredients_to_shopping_list">Add Ingredients to Shopping List?</string>
    <string name="dialog_update_inventory">Ingredients Added to your Pantry</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="directions">Directions:</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="inventory_go">Go to your Pantry</string>
    <string name="delete">Delete</string>
    <string name="delete_check">Are you sure you want to delete</string>
    <string name="add">Add</string>
    <string name="title_recommended">Recommended</string>
    <string name="title_recent">Recent</string>
    <string name="title_favorited">Favorited</string>
    <string name="title_activity_inventory_add_grid">InventoryAddGrid</string>
    <string name="search_hint">Search by recipe, ingredient...</string>
    <string name="title_userresults">User Results</string>
    <string name="title_searchresults">Search Results</string>
    <string name="title_activity_cook_book">CookBookActivity</string>
    <string name="title_activity_add_recipe">AddRecipeActivity</string>
    <string name="title_activity_user_search_results_fragment">UserSearchResultsActivity</string>
    <string name="title_you_have">You have: </string>
    <string name="title_you_need">You need: </string>
    <string name="no_items"> You have not selected any items</string>
    <string name="common"> Common Ingredients</string>
    <string name="alpha"> Other Ingredients </string>
    <string name="recerror">Recommendations unavailable.\nYou may be offline.</string>
    <string name="refresh">Refresh</string>
    <string name="loginerror">You gotta login you dingus!</string>
    <string name="title_activity_user_search_results_fragment">Jim Sucks</string>
    <string name="no_recipes">You Have No User Recipes</string>
    <string name="dialog_go_to_shopping">Add and go to Shopping List</string>
    <string name="dialog_add_and_return">Add and return to Recipe</string>
    <string name="add_ing_to_shopping">Add something to your shopping list...</string>
    <string name="inv_find">Looking for something?</string>
    <string name="remove_checked_button">Remove Checked</string>
    <string name="dialog_remove_items">Remove items?</string>
    <string name="yes">Yes</string>
    <string name="inventory_hint">Add something to your inventory...</string>
    <string name="or">Or</string>
    <string name="go_to_add_grid">Add in bulk!</string>
</resources>