<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/title_activity_home_page"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_home_page"/>
    
    <item
        android:id="@+id/title_activity_inventory"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_inventory"/>
        
    <item
        android:id="@+id/title_activity_login"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_login"/>
            
    <item
        android:id="@+id/title_activity_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout"/>
        
    <item
        android:id="@+id/title_activity_register"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_register"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>