<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	    
	<RelativeLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".TutorialActivity" >
	
	    <TextView android:id="@+id/welcome_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/tutorial_title"
	        android:layout_centerHorizontal="true"
	        android:textSize="20sp" />
	    
	    <Gallery android:id="@+id/gallery"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/welcome_text" />
	    
	    <Button android:id="@+id/first_register"
	        android:layout_centerVertical="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/gallery"
	        android:layout_centerHorizontal="true"
	        android:text="@string/register"
	        android:onClick="register" />
	    
	   <Button android:id="@+id/setup_inventory_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_below="@id/first_register"
	        android:text="@string/setup_inventory"
	        android:onClick="setupInventory" />
	    
	    <Button android:id="@+id/skip_button"
	        android:layout_below="@id/setup_inventory_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:text="@string/skip_text"
	        android:onClick="skipTutorial" />
	
	</RelativeLayout>

</ScrollView>