<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InventoryAddActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
       <Button
        android:id="@+id/update_button"
    	android:layout_height="wrap_content"
     	android:layout_width="wrap_content"
    	android:text="@string/ingredient_update"
     	android:onClick="updateInventory" />
       
    <EditText
        android:id="@+id/search_text"
        android:layout_below = "@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ingredient_search" />
    
    <Button
        android:id="@+id/search"
        android:layout_below = "@+id/update_button"
        android:layout_toRightOf = "@+id/search_text"
    	android:layout_height="wrap_content"
     	android:layout_width="wrap_content"
    	android:text="@string/search"
     	android:onClick="search" />
   
    <ExpandableListView 
        android:id="@+id/exp_inv_add_list"
        android:layout_below = "@+id/search"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>

</RelativeLayout>