<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchResultsActivity" 
    android:orientation="vertical">

    <LinearLayout android:id="@+id/searchbar"
  	    android:layout_width="fill_parent"
  	    android:layout_height="wrap_content"
  	    android:orientation="horizontal" >
  	    
    <EditText
        android:id="@+id/search_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_search_query" 
        android:layout_weight="3"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="search"
        android:text="@string/button_search" 
        android:layout_weight="1"/>
    
    </LinearLayout>
    
    <RelativeLayout
  	    android:id="@+id/searchresults"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/searchbar" >
    
    <TextView
        android:id="@+id/searchresultstext"
    	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25px"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/results"
        android:layout_below="@id/searchresults" />
    
    <ListView 
        android:id="@+id/resultList"
        android:layout_height="match_parent" 
        android:layout_width="fill_parent"
        android:layout_below="@id/searchresultstext" />
        
    <FrameLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center"
            android:indeterminate="true" />
    
    </FrameLayout>

	</RelativeLayout>
	
</RelativeLayout>